--- a/PointOfSale/PointOfSale.csproj
+++ b/PointOfSale/PointOfSale.csproj
@@ -4,6 +4,15 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <PackageId>CowboyCafe.PointOfSale</PackageId>
+    <Authors>CowboyCafe.PointOfSale</Authors>
+    <Product>CowboyCafe.PointOfSale</Product>
+    <AssemblyName>CowboyCafe.PointOfSale</AssemblyName>
+    <RootNamespace>CowboyCafe.PointOfSale</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj" />
+  </ItemGroup>
 
 </Project>
